--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.5.1",
     "js-datepicker": "^5.18.0",
     "puppeteer": "^5.5.0",
+    "redis": "^3.0.2",
     "request": "^2.88.2",
     "websocket": "^1.0.33",
     "ws": "^7.4.2"
