--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "FCT-Automated",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./js/main.js",
   "scripts": {
     "start": "electron .",
     "build_win32": "electron-packager . MyApp --platform=win32 --arch=x64 --asar=true --ignore=node_modules/electron-* "
@@ -16,10 +16,13 @@
     "bootstrap-table": "^1.18.2",
     "electron": "^11.1.1",
     "jquery": "^3.5.1",
+    "jquery-treegrid": "^0.3.0",
     "js-datepicker": "^5.18.0",
+    "mongodb": "^3.6.6",
     "puppeteer": "^5.5.0",
-    "redis": "^3.0.2",
+    "redis": "^3.1.2",
     "request": "^2.88.2",
+    "sqlite3": "^5.0.2",
     "websocket": "^1.0.33",
     "ws": "^7.4.2"
   }
