--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "async": "^3.2.1",
     "bootstrap": "^4.6.0",
     "bootstrap-table": "^1.18.2",
     "electron": "^11.1.1",
+    "electron-rebuild": "^2.3.5",
+    "express.js": "^1.0.0",
     "jquery": "^3.5.1",
     "jquery-treegrid": "^0.3.0",
     "js-datepicker": "^5.18.0",
     "mongodb": "^3.6.6",
+    "node-static": "^0.7.11",
     "puppeteer": "^5.5.0",
     "redis": "^3.1.2",
     "request": "^2.88.2",
     "sqlite3": "^5.0.2",
     "websocket": "^1.0.33",
-    "ws": "^7.4.2"
+    "ws": "^7.5.3"
   }
 }
