--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron": "^11.1.1",
     "electron-rebuild": "^2.3.5",
     "express.js": "^1.0.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "jquery-treegrid": "^0.3.0",
     "js-datepicker": "^5.18.0",
