--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "puppeteer": "^5.5.0",
     "redis": "^3.1.2",
     "request": "^2.88.2",
+    "require": "^2.4.20",
     "sqlite3": "^5.0.2",
     "websocket": "^1.0.33",
     "ws": "^7.5.3"
