--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "QA",
-  "version": "3.0.0",
+  "name": "QA_ver.20211216",
+  "version": "4.0.0",
   "description": "",
   "main": "./controller/main.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "build": {
     "appId": "com.fc.app",
-    "productName": "QA",
+    "productName": "QA_ver.20211216",
     "win": {
       "icon": "build/favicon.ico",
       "target": [
