--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "async": "^3.2.1",
+    "axios": "^0.25.0",
     "bootstrap": "^4.6.0",
     "bootstrap-table": "^1.18.2",
     "express.js": "^1.0.0",
